<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/linear_mind"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center_vertical"
        android:padding="10dp">

        <com.google.android.material.imageview.ShapeableImageView
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:scaleType="centerCrop"
            android:src="@drawable/img_android"
            app:shapeAppearanceOverlay="@style/circle" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/what"
            android:textColor="@color/black"
            android:textSize="18sp" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.4dp"
        android:background="#cbcbcb" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="36dp">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center">

            <ImageView
                android:layout_width="@dimen/image_db"
                android:layout_height="@dimen/image_db"
                android:contentDescription="@string/todo"
                android:src="@drawable/ic_baseline_videocam_24" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:text="@string/live"
                android:textColor="@color/black"
                android:textStyle="bold" />

        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginVertical="4dp"
            android:background="#cbcbcb" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center">

            <ImageView
                android:layout_width="@dimen/image_db"
                android:layout_height="@dimen/image_db"
                android:contentDescription="@string/todo"
                android:src="@drawable/ic_baseline_photo_library_24" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:text="@string/photo"
                android:textColor="@color/black"
                android:textStyle="bold" />

        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginVertical="4dp"
            android:background="#cbcbcb" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center">

            <ImageView
                android:layout_width="@dimen/image_db"
                android:layout_height="@dimen/image_db"
                android:contentDescription="@string/todo"
                android:src="@drawable/ic_baseline_switch_video_24" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:text="@string/room"
                android:textColor="@color/black"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>